# develop

./: .gitignore  README.md  check_strings.py  debug_detail.py  debug_transactions.py  decorators.py  main.py  pyproject.toml  run_tests.py  test_simple.py
data/: operations.csv  operations.xlsx
financial_transactions/: csv_reader.py  excel_reader.py  main.py
services/: analytics_service.py  transaction_utils.py
src/: external_api.py  generators.py  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  test.generators.py  test.main.py  test_analytics_service.py  test_csv_reader.py  test_decorators.py  test_excel_reader.py  test_external_api.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_simple.py  test_transaction_counter.py  test_transaction_utils.py  test_utils.py  test_widget.py  tests_masks.py  tests_processing.py  tests_widget.py
